--- a/fp30remote.html
+++ b/fp30remote.html
@@ -4,7 +4,7 @@
         <title>FP-30 Remote Control</title>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="color-scheme" content="dark light"/>
         <meta name="theme-color" media="(prefers-color-scheme: light)" content="#464ba3"/>
