Add note on bluetooth connection

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -1257,6 +1257,12 @@ customElements.define('x-checkbox', class extends HTMLElement {
                 settings.
             </p>
             <p>
+                For Bluetooth to work you need to pair the instrument with your
+                device first. If not paired no data can be exchanged.
+                If your browser doesn't support BLE no Bluetooth option is
+                shown.
+            </p>
+            <p>
                 It is self-contained, so you can save this page locally and
                 open it directly.
             </p>
