--- a/fp30remote.html
+++ b/fp30remote.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="color-scheme" content="dark light"/>
-        <meta name="theme-color" media="(prefers-color-scheme: light)" content="#464ba3"/>
-        <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#464ba3"/>
+        <meta name="theme-color" media="(prefers-color-scheme: light)" content="#073642"/>
+        <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#eee8d5"/>
 
         <link rel="apple-touch-icon" sizes="128x128" href="icon-128.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="icon-32.png" />
@@ -16,21 +16,32 @@
 
     <style>
 :root {
-    accent-color: #464ba3;
+    --base03: #002b36;
+    --base02: #073642;
+    --base01: #586e75;
+    --base00: #657b83;
+    --base0: #839496;
+    --base1: #93a1a1;
+    --base2: #eee8d5;
+    --base3: #fdf6e3;
+    --blue: #268bd2;
+
+    background: var(--base3);
+    color: var(--base03);
+    accent-color: var(--blue);
 }
 
 body {
     font-family: "DejaVu Sans", verdana, sans-serif;
     font-size: 14pt;
     user-select: none;
-    background: #fff;
     margin: 0px;
 }
 h2 {
     padding: 16px;
     margin-top: 0px;
-    background: #464ba3;
-    color: #fff;
+    color: var(--base1);
+    background: var(--base02);
 }
 
 div {
@@ -47,12 +58,13 @@ select {
     font-size: 12pt;
     font-weight: bold;
     border-radius: 0px;
-    background: #fff;
     border-top: none;
     border-left: none;
     border-right: none;
     vertical-align: middle;
-    border-bottom: 1px solid #aaa;
+    color: var(--base03);
+    background: var(--base3);
+    border-bottom: 1px solid var(--base01);
 }
 
 input[type=range] {
@@ -70,7 +82,7 @@ input {
     font-weight: bold;
     font-size: 12pt;
     border: 0px solid;
-    border-bottom: 1px solid #aaa;
+    border-bottom: 1px solid var(--base01);
     width: auto;
 }
 
@@ -80,9 +92,9 @@ input {
     display: inline-block;
     width: 44px;
     height: 22px;
-    background-color: white;
+    background-color: var(--base3);
     border-radius: 30px;
-    border: 2px solid #aaa;
+    border: 2px solid var(--base01);
 }
 
 .toggle::after {
@@ -91,7 +103,7 @@ input {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: grey;
+    background-color: var(--blue);
     top: 1px;
     left: 1px;
     transition: all 0.2s;
@@ -99,11 +111,11 @@ input {
 
 .checkbox:checked + .toggle::after {
     left : 22px;
-    background-color: white;
+    background-color: var(--base3);
 }
 
 .checkbox:checked + .toggle {
-    background-color: #464ba3;
+    background-color: var(--blue);
 }
 
 .checkbox {
@@ -111,11 +123,11 @@ input {
 }
 
 button {
-    background-color: #fff;
+    background-color: var(--base03);
     border: 0px solid;
     font-size: 12pt;
     font-weight: bold;
-    color: #4d9fff;
+    color: var(--base3);
     padding: 12px;
     align: center;
 }
@@ -148,31 +160,24 @@ button {
 
 .tabactive {
     border-bottom:4px solid currentcolor;
+    border-color: var(--blue);
 }
 
 b {
-    background-color: #ffc;
+    background-color: var(--base2);
 }
 
 @media (prefers-color-scheme: dark) {
-    body {
-        background: #333;
+    :root {
+        --base3: #002b36;
+        --base2: #073642;
+        --base1: #586e75;
+        --base0: #657b83;
+        --base00: #839496;
+        --base01: #93a1a1;
+        --base02: #eee8d5;
+        --base03: #fdf6e3;
     }
-    select {
-        background: #333;
-    }
-    b {
-        background-color: #666;
-    }
-    button {
-        background-color: #333;
-        color: #4d9fff;
-    }
-    .toggle {
-        background-color: #333;
-        border: 2px solid grey;
-    }
-
 }
     </style>
 
