Add license identifier to html files

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
 <html lang="en">
     <head>
         <title>FP-30 Remote Control</title>
@@ -13,7 +14,6 @@
         <link rel="apple-touch-icon" sizes="128x128" href="icon-128.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="icon-32.png" />
         <link rel="manifest" href="manifest.json">
-
     <style>
 :root {
     --base03: #002b36;
