Rename metronome tempo slider

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -1190,7 +1190,7 @@ customElements.define('x-checkbox', class extends HTMLElement {
         </span>
         <x-checkbox name="metronome_status" value="0"></x-checkbox>
 
-        <div>Metronome</div>
+        <div>Tempo</div>
         <x-range name="metronome_speed"></x-range>
         <div id="metronome_speed_text">0</div>
 
